Change project structure to better organize the styles folder - add SASS and some necessary scripts to build dist files

--- a/src/index.html
+++ b/src/index.html
@@ -20,8 +20,8 @@
     referrerpolicy="no-referrer"
     />
     <!-- <link rel="stylesheet" href="style-min.css" /> -->
-    <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" type="image/jpg" href="/images/favicon.ico"/>
+    <link rel="stylesheet" href="./assets/css/styles.css" />
+    <link rel="shortcut icon" type="image/jpg" href="./assets/images/favicon.ico"/>
     
   </head>
   <body>
@@ -32,16 +32,16 @@
       target="_blank"
       title="Agende uma consulta"
       >
-      <img src="./images/whatsapp_logo_new-2x.png" alt="Whatsapp" />
+      <img src="./assets/images/whatsapp_logo_new-2x.png" alt="Whatsapp" />
     </a>
   </div>
   <header class="bg-primary bg-breast">
     <div class="container">
       <div class="row">
         <a id="logo" class="logo" href="#" title="Amanda do Val consultoria"
-        ><img src="./images/logo-transparent.png" alt="placeholder"
+        ><img src="./assets/images/logo-transparent.png" alt="placeholder"
         /></a>
-        <a href="#" class="name" title="Amanda do Val">Amanda do Val</a>
+        <!-- <a href="#" class="name" title="Amanda do Val">Amanda do Val</a> -->
         <input type="checkbox" id="check">
         <label for="check" class="checkbtn">
           <i class="fas fa-bars"></i>
@@ -111,12 +111,12 @@
             </p>
           </div>
           <div class="img-box img-rounded hide-on-mobile">
-            <img src="./images/content/gestante-retrato-fora.jpg" alt="Foto de uma gestante sorrindo, com as mãos sobre a barriga." />
+            <img src="./assets/images/content/gestante-retrato-fora.jpg" alt="Foto de uma gestante sorrindo, com as mãos sobre a barriga." />
           </div>
           </div>
           <div class="row pt-80 reverse">
             <div class="img-box img-rounded">
-              <img src="./images/content/gestante-retrato-estudio.jpg" alt="Foto de uma gestante em ensaio fotográfico, sorrindo e apoiando uma das mãos sobre a barriga." />
+              <img src="./assets/images/content/gestante-retrato-estudio.jpg" alt="Foto de uma gestante em ensaio fotográfico, sorrindo e apoiando uma das mãos sobre a barriga." />
             </div>
             <div class="content-box right">
               <h3>Minha formação:</h3>
@@ -155,7 +155,7 @@
 
         <div class="row">
           <div class="card">
-            <img src="./images/content/consultoria-gestante.jpg" alt="Foto da barriga de uma gestante com suas mãos e as mãos do pai da criança formando um coração em frente a barriga." />
+            <img src="./assets/images/content/consultoria-gestante.jpg" alt="Foto da barriga de uma gestante com suas mãos e as mãos do pai da criança formando um coração em frente a barriga." />
 
             <div class="text-container">
               <strong>Consultoria para gestantes</strong>
@@ -170,7 +170,7 @@
             </div>
           </div>
           <div class="card">
-            <img src="./images/content/parto-em-casa.jpg" alt="Foto de uma mulher parindo em casa sendo assistida por uma enfermeira obstétrica." />
+            <img src="./assets/images/content/parto-em-casa.jpg" alt="Foto de uma mulher parindo em casa sendo assistida por uma enfermeira obstétrica." />
             <div class="text-container">
               <strong>Acompanhamento de parto</strong>
               <!-- CONSIDERAR PARTO Acompanhamento pré-hospitalar -->
@@ -186,7 +186,7 @@
             </div>
           </div>
           <div class="card">
-            <img src="./images/content/consultoria-amamentacao.jpg" alt="Foto de uma mãe amamentando sua filha bebê." />
+            <img src="./assets/images/content/consultoria-amamentacao.jpg" alt="Foto de uma mãe amamentando sua filha bebê." />
             <div class="text-container">
               <strong>Consultoria em amamentação</strong>
               <p>
@@ -201,7 +201,7 @@
             </div>
           </div>
           <div class="card">
-            <img src="./images/content/aplicacao-brinco.jpg" alt="Foto de uma menina em ensaio de newborn." />
+            <img src="./assets/images/content/aplicacao-brinco.jpg" alt="Foto de uma menina em ensaio de newborn." />
             <div class="text-container">
               <strong>Aplicação humanizada de 1º brinco</strong>
               <p>
@@ -216,7 +216,7 @@
           </div>
 
           <div class="card">
-            <img src="./images/content/laserterapia.jpg" alt="Foto de um aparelho de laserterapia sobre a barriga de uma gestante." />
+            <img src="./assets/images/content/laserterapia.jpg" alt="Foto de um aparelho de laserterapia sobre a barriga de uma gestante." />
             <div class="text-container">
               <strong>Laserterapia</strong>
               <p>
@@ -232,7 +232,7 @@
           </div>
 
           <div class="card">
-            <img src="./images/content/desmame-gradual.jpg" alt="Foto de uma mãe amamentando sua filha de 2 anos." />
+            <img src="./assets/images/content/desmame-gradual.jpg" alt="Foto de uma mãe amamentando sua filha de 2 anos." />
             <div class="text-container">
               <strong>Desmame gradual</strong>
               <p>
@@ -326,7 +326,7 @@
         <p>Este vale-presente é um abraço em forma de cuidado, pensado para acolher, apoiar e tornar sua jornada de gestação, parto ou amamentação ainda mais especial.</p>
       </div>
     </section>
-    <section>
+    <section id="instagram-feed">
       <div class="elfsight-app-499afdd3-0f40-4b53-b449-6b9980f68e92" data-elfsight-app-lazy></div>
     </section>
     <section id="contato" class="bg-primary">
@@ -336,7 +336,7 @@
           <div class="content-box">
 
             <div class="img-box">
-              <img src="./images/content/amanda-foto-2.png" alt="Foto de Amanda do Val consultora de amamentação" />
+              <img src="./assets/images/content/amanda-foto-2.png" alt="Foto de Amanda do Val consultora de amamentação" />
               </div>
             
           </div>
