Fix some styles and spacings, also add the background to the about section

--- a/src/index.html
+++ b/src/index.html
@@ -70,8 +70,8 @@
         </div>
       </div>
     </header>
-    <div class="sentinela"></div>
-    <section id="inicio" class="bg-primary hero bg-breast">
+    <!-- <div class="sentinela"></div> -->
+    <section id="inicio" class="bg-primary hero">
       
       <div class="container">
         <div class="content-box">
