Fix some text issues and changing heading text colors

--- a/src/index.html
+++ b/src/index.html
@@ -91,8 +91,8 @@
           </h1>
           
           <p>
-            Consultoria personalizada para ajudá-la a estabelecer uma
-            amamentação tranquila e gratificante.
+            Consultoria personalizada para ajudá-la a estabelecer uma gestação e
+            amamentação tranquila e segura.
           </p>
           
           <a
@@ -267,7 +267,7 @@
         </div>
       </div>
     </section>
-    <section id="planos">
+    <section id="planos" class="bg-breast">
       <div class="container">
         <h2>Planos</h2>
         <div class="row">
@@ -322,7 +322,7 @@
               parto, estou ao seu lado, oferecendo suporte físico e emocional
               para que esse momento seja vivido com segurança e acolhimento. E
               na amamentação, ajude você e seu bebê a iniciar esse vínculo com
-              tranquilidade e amor. Você não está sozinho—estou aqui para
+              tranquilidade e amor. Você não está sozinha, estou aqui para
               caminhar com você! Vamos juntas?
             </p>
           </div>
@@ -345,7 +345,7 @@
         <p>Este vale-presente é um abraço em forma de cuidado, pensado para acolher, apoiar e tornar sua jornada de gestação, parto ou amamentação ainda mais especial.</p>
       </div>
     </section>
-    <section id="instagram-feed">
+    <section id="instagram-feed" class="bg-breast">
       <div class="elfsight-app-499afdd3-0f40-4b53-b449-6b9980f68e92" data-elfsight-app-lazy></div>
     </section>
     <section id="contato" class="bg-primary">
