Add custom bullets for the ul list items

--- a/src/index.html
+++ b/src/index.html
@@ -139,24 +139,27 @@
             </div>
             <div class="content-box right">
               <h3>Minha formação:</h3>
-              <ul class="mb-80">
+              <ul class="mb-80 custom-ul">
                 <li>
-                  <span
-                  >Bacharel em Enfermagem pela Universidade Federal de
+                  <span class="custom-bullet"><!----></span>
+                  <span class="list-text">Bacharel em Enfermagem pela Universidade Federal de
                   Pelotas.</span
                   >
                 </li>
                 <li>
+                  <span class="custom-bullet"><!----></span>
                   <span class="list-text"
                   >Especialista em saúde materno-infantil.</span
                   >
                 </li>
                 <li>
+                  <span class="custom-bullet"><!----></span>
                   <span class="list-text"
                   >Especialista em aleitamento materno.</span
                   >
                 </li>
                 <li>
+                  <span class="custom-bullet"><!----></span>
                   <span class="list-text"
                     >Pós-graduanda em Enfermagem em Ginecologia e
                     Obstetrícia</span
